src/test/deca/context/valid/sansObjet/BoolAffectationWithComparaison.deca
{
    boolean x,y,z,w ;
    x = (100>20);
    y= (100<=100);
    z=(20<30);
    w = (z && (1>2));
    if (!w){
        print("Hello 2020");
    }
}